--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,13 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
+  #State Managment
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
+
+  # Navigation
+  routemaster: 1.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
